[gd_scene load_steps=55 format=3 uid="uid://kaddjbyv5ypr"]

[ext_resource type="Script" path="res://Scripts/Scripts/phasePrefab.gd" id="1_qhhi1"]
[ext_resource type="Texture2D" uid="uid://bj1fuc1hqal5r" path="res://Sprites/MundodosCeus/Backgrounds/background Ceus.png" id="2_q5wgq"]
[ext_resource type="Script" path="res://Scripts/Scripts/Player.gd" id="3_bfatd"]
[ext_resource type="Texture2D" uid="uid://lrs6bufgisdr" path="res://Sprites/protagonista.png" id="4_tktij"]
[ext_resource type="Texture2D" uid="uid://eqrpbuwk44by" path="res://Sprites/TestEntitites/PlaceholderSpriteSheets.png" id="5_7utpr"]
[ext_resource type="Texture2D" uid="uid://bl12r4blja8qv" path="res://Sprites/MundodosCeus/Objetos/portal.png" id="5_cgbks"]
[ext_resource type="Texture2D" uid="uid://dkcpfhkthoj47" path="res://Sprites/MundodosCeus/Sprites/MinotauroAndando.png" id="6_fk3p1"]
[ext_resource type="Texture2D" uid="uid://nchr1xn8hmtc" path="res://Sprites/TestEntitites/Velha.png" id="6_nrvv5"]
[ext_resource type="Texture2D" uid="uid://17qakjxbpsec" path="res://Sprites/MundodosCeus/Sprites/Magrelinho.png" id="6_omqbr"]
[ext_resource type="Texture2D" uid="uid://bu6inw10tc861" path="res://Sprites/MundodosCeus/TileMaps/Estrada.png" id="7_bqi8d"]
[ext_resource type="Texture2D" uid="uid://bpq3gb3opp7na" path="res://Sprites/MundodosCeus/TileMaps/Nuvens.png" id="10_rheaj"]
[ext_resource type="Texture2D" uid="uid://dnkfwqsm2wwjv" path="res://Sprites/MundodosCeus/Objetos/pilastraGrega.png" id="11_wog3g"]
[ext_resource type="PackedScene" uid="uid://cwqi12v0ixq2j" path="res://Mundo teste/Cena.tmx" id="13_x4mqa"]

[sub_resource type="CircleShape2D" id="CircleShape2D_w8b2p"]
radius = 80.0

[sub_resource type="CircleShape2D" id="CircleShape2D_qeb26"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2yyqk"]
size = Vector2(1282, 92)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jxghc"]
size = Vector2(41, 294)

[sub_resource type="CircleShape2D" id="CircleShape2D_l6120"]
radius = 22.0

[sub_resource type="AtlasTexture" id="AtlasTexture_2uxp6"]
atlas = ExtResource("5_cgbks")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhqci"]
atlas = ExtResource("5_cgbks")
region = Rect2(0, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_y43tt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2uxp6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhqci")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_qx4f8"]
atlas = ExtResource("5_cgbks")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqyiy"]
atlas = ExtResource("5_cgbks")
region = Rect2(0, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_rtwct"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qx4f8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqyiy")
}],
"loop": true,
"name": &"default",
"speed": 7.0
}]

[sub_resource type="Curve" id="Curve_y68su"]
min_value = -1.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.987952, -0.768421), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_3q2lm"]
curve = SubResource("Curve_y68su")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ljvbt"]
particle_flag_disable_z = true
spread = 180.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 30.0
initial_velocity_max = 70.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_max = 2.0
color = Color(1, 0.219608, 1, 1)
hue_variation_curve = SubResource("CurveTexture_3q2lm")

[sub_resource type="AtlasTexture" id="AtlasTexture_s5748"]
atlas = ExtResource("5_7utpr")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7jw8"]
atlas = ExtResource("5_7utpr")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uytvx"]
atlas = ExtResource("5_7utpr")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ya5n"]
atlas = ExtResource("6_omqbr")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y281q"]
atlas = ExtResource("6_omqbr")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2r7w"]
atlas = ExtResource("6_omqbr")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_psfg3"]
atlas = ExtResource("6_omqbr")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xyojd"]
atlas = ExtResource("6_omqbr")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lvfh"]
atlas = ExtResource("6_omqbr")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hfux4"]
atlas = ExtResource("5_7utpr")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtjyy"]
atlas = ExtResource("6_fk3p1")
region = Rect2(0, 0, 64, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_bee4u"]
atlas = ExtResource("6_fk3p1")
region = Rect2(64, 0, 64, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4hhg"]
atlas = ExtResource("6_nrvv5")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8hye"]
atlas = ExtResource("5_7utpr")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjkds"]
atlas = ExtResource("5_7utpr")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0i403"]
atlas = ExtResource("5_7utpr")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hogv8"]
atlas = ExtResource("5_7utpr")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_0kbrn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5748")
}],
"loop": true,
"name": &"Beetle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7jw8")
}],
"loop": true,
"name": &"BlackCat",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uytvx")
}],
"loop": true,
"name": &"Bunny",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ya5n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y281q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2r7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_psfg3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xyojd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lvfh")
}],
"loop": true,
"name": &"Dog",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfux4")
}],
"loop": true,
"name": &"Mantis",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtjyy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bee4u")
}],
"loop": true,
"name": &"Minotaur",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4hhg")
}],
"loop": true,
"name": &"OldLady",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8hye")
}],
"loop": true,
"name": &"Pegasus",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjkds")
}],
"loop": true,
"name": &"PinkMantis",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0i403")
}],
"loop": true,
"name": &"Pix",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hogv8")
}],
"loop": true,
"name": &"WhiteCat",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ijtdx"]
size = Vector2(274, 159)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7lygi"]
size = Vector2(99, 112)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gicbd"]
size = Vector2(299, 154)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y7e71"]
size = Vector2(91, 113)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_feend"]
texture = ExtResource("7_bqi8d")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ntlfd"]
texture = ExtResource("10_rheaj")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
5:0/0 = 0
6:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_alb3w"]
texture = ExtResource("11_wog3g")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mgs01"]
texture = ExtResource("2_q5wgq")

[sub_resource type="TileSet" id="TileSet_27nwf"]
sources/0 = SubResource("TileSetAtlasSource_feend")
sources/3 = SubResource("TileSetAtlasSource_ntlfd")
sources/4 = SubResource("TileSetAtlasSource_alb3w")
sources/5 = SubResource("TileSetAtlasSource_mgs01")

[node name="ScenePrefab" type="Node2D"]
script = ExtResource("1_qhhi1")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("2_q5wgq")

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(632, 562)
script = ExtResource("3_bfatd")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
texture = ExtResource("4_tktij")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(-1, -8)
shape = SubResource("CircleShape2D_w8b2p")

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(-11, -6)

[node name="Area2D" type="Area2D" parent="Player" groups=["Player"]]
scale = Vector2(1.2, 2.2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Area2D"]
shape = SubResource("CircleShape2D_qeb26")

[node name="Teto" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Teto"]
position = Vector2(640, 400)
shape = SubResource("RectangleShape2D_2yyqk")

[node name="LeftWall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
position = Vector2(-300, 501)
shape = SubResource("RectangleShape2D_jxghc")

[node name="RightWall" type="StaticBody2D" parent="."]
position = Vector2(1240, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
position = Vector2(300, 501)
shape = SubResource("RectangleShape2D_jxghc")

[node name="Floor" type="StaticBody2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Floor"]
position = Vector2(640, 670)
shape = SubResource("RectangleShape2D_2yyqk")

[node name="LeftPortal" type="Area2D" parent="."]
position = Vector2(-193, 553)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftPortal"]
position = Vector2(-5, 0)
shape = SubResource("CircleShape2D_l6120")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="LeftPortal"]
scale = Vector2(-1, 1)
sprite_frames = SubResource("SpriteFrames_y43tt")

[node name="RightPortal" type="Area2D" parent="."]
position = Vector2(1365, 526)

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightPortal"]
position = Vector2(88, 31)
shape = SubResource("CircleShape2D_l6120")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="RightPortal"]
position = Vector2(84, 34)
sprite_frames = SubResource("SpriteFrames_rtwct")
frame_progress = 0.110801

[node name="GPUParticles2D" type="GPUParticles2D" parent="RightPortal"]
position = Vector2(88, 38)
emitting = false
amount = 50
process_material = SubResource("ParticleProcessMaterial_ljvbt")
explosiveness = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Morto" type="Label" parent="."]
visible = false
offset_left = 424.0
offset_top = 224.0
offset_right = 464.0
offset_bottom = 247.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
text = "MORTO"

[node name="CharacterLeft" type="CharacterBody2D" parent="."]
position = Vector2(-141, 15)

[node name="SpriteLeft" type="AnimatedSprite2D" parent="CharacterLeft"]
position = Vector2(456, 520)
sprite_frames = SubResource("SpriteFrames_0kbrn")
animation = &"Dog"
frame_progress = 0.908853

[node name="Area2D" type="Area2D" parent="CharacterLeft" groups=["Target"]]
position = Vector2(291, 575)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterLeft/Area2D"]
position = Vector2(223, -54.5)
shape = SubResource("RectangleShape2D_ijtdx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterLeft"]
position = Vector2(457.5, 531)
shape = SubResource("RectangleShape2D_7lygi")
debug_color = Color(0.94902, 0.0745098, 0.521569, 0.419608)

[node name="CharacterRight" type="CharacterBody2D" parent="."]
position = Vector2(134, 1)

[node name="SpriteRight" type="AnimatedSprite2D" parent="CharacterRight"]
position = Vector2(808, 528)
sprite_frames = SubResource("SpriteFrames_0kbrn")
animation = &"Dog"

[node name="Area2DRight" type="Area2D" parent="CharacterRight" groups=["Target"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterRight/Area2DRight"]
position = Vector2(740.5, 529)
shape = SubResource("RectangleShape2D_gicbd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterRight"]
position = Vector2(809.5, 532.5)
shape = SubResource("RectangleShape2D_y7e71")
debug_color = Color(0.94902, 0.0745098, 0.521569, 0.419608)

[node name="Nuvens" type="TileMap" parent="."]
visible = false
tile_set = SubResource("TileSet_27nwf")
format = 2
layer_0/tile_data = PackedInt32Array(2555904, 0, 0, 2555905, 0, 0, 2555906, 0, 0, 2555907, 0, 0, 2555908, 0, 0, 2555909, 0, 0, 2555910, 0, 0, 2555911, 0, 0, 2555912, 0, 0, 2555913, 0, 0, 2555914, 0, 0, 2555915, 0, 0, 2555916, 0, 0, 2555917, 0, 0, 2555918, 0, 0, 2555919, 0, 0, 2555920, 0, 0, 2555921, 0, 0, 2555922, 0, 0, 2555923, 0, 0, 2555924, 0, 0, 2555925, 0, 0, 2555926, 0, 0, 2555927, 0, 0, 2555928, 0, 0, 2555929, 0, 0, 2555930, 0, 0, 2555931, 0, 0, 2555932, 0, 0, 2555933, 0, 0, 2555934, 0, 0, 2555935, 0, 0, 2555936, 0, 0, 2555937, 0, 0, 2555938, 0, 0, 2555939, 0, 0, 2555940, 0, 0, 2555941, 0, 0, 2555942, 0, 0, 2555943, 0, 0, 2555944, 0, 0, 2555945, 0, 0, 2555946, 0, 0, 2555947, 0, 0, 2555948, 0, 0, 2555949, 0, 0, 2555950, 0, 0, 2555951, 0, 0, 2555952, 0, 0, 2555953, 0, 0, 2555954, 0, 0, 2555955, 0, 0, 2555956, 0, 0, 2555957, 0, 0, 2555958, 0, 0, 2555959, 0, 0, 2555960, 0, 0, 2555961, 0, 0, 2555962, 0, 0, 2555963, 0, 0, 2555964, 0, 0, 2555965, 0, 0, 2555966, 0, 0, 2555967, 0, 0, 2555968, 0, 0, 2555969, 0, 0, 2555970, 0, 0, 2555971, 0, 0, 2555972, 0, 0, 2555973, 0, 0, 2555974, 0, 0, 2555975, 0, 0, 2555976, 0, 0, 2555977, 0, 0, 2555978, 0, 0, 2555979, 0, 0, 2555980, 0, 0, 2555981, 0, 0, 2555982, 0, 0, 2555983, 0, 0, 2621440, 0, 0, 2686976, 0, 0, 2752512, 0, 0, 2818048, 0, 0, 2883584, 0, 0, 2621441, 0, 0, 2686977, 0, 0, 2752513, 0, 0, 2818049, 0, 0, 2883585, 0, 0, 2621442, 0, 0, 2686978, 0, 0, 2752514, 0, 0, 2818050, 0, 0, 2883586, 0, 0, 2621443, 0, 0, 2686979, 0, 0, 2752515, 0, 0, 2818051, 0, 0, 2883587, 0, 0, 2621444, 0, 0, 2686980, 0, 0, 2752516, 0, 0, 2818052, 0, 0, 2883588, 0, 0, 2621445, 0, 0, 2686981, 0, 0, 2752517, 0, 0, 2818053, 0, 0, 2883589, 0, 0, 2621446, 0, 0, 2686982, 0, 0, 2752518, 0, 0, 2818054, 0, 0, 2883590, 0, 0, 2621447, 0, 0, 2686983, 0, 0, 2752519, 0, 0, 2818055, 0, 0, 2883591, 0, 0, 2621448, 0, 0, 2686984, 0, 0, 2752520, 0, 0, 2818056, 0, 0, 2883592, 0, 0, 2621449, 0, 0, 2686985, 0, 0, 2752521, 0, 0, 2818057, 0, 0, 2883593, 0, 0, 2621450, 0, 0, 2686986, 0, 0, 2752522, 0, 0, 2818058, 0, 0, 2883594, 0, 0, 2621451, 0, 0, 2686987, 0, 0, 2752523, 0, 0, 2818059, 0, 0, 2883595, 0, 0, 2621452, 0, 0, 2686988, 0, 0, 2752524, 0, 0, 2818060, 0, 0, 2883596, 0, 0, 2621453, 0, 0, 2686989, 0, 0, 2752525, 0, 0, 2818061, 0, 0, 2883597, 0, 0, 2621454, 0, 0, 2686990, 0, 0, 2752526, 0, 0, 2818062, 0, 0, 2883598, 0, 0, 2621455, 0, 0, 2686991, 0, 0, 2752527, 0, 0, 2818063, 0, 0, 2883599, 0, 0, 2621456, 0, 0, 2686992, 0, 0, 2752528, 0, 0, 2818064, 0, 0, 2883600, 0, 0, 2621457, 0, 0, 2686993, 0, 0, 2752529, 0, 0, 2818065, 0, 0, 2883601, 0, 0, 2621458, 0, 0, 2686994, 0, 0, 2752530, 0, 0, 2818066, 0, 0, 2883602, 0, 0, 2621459, 0, 0, 2686995, 0, 0, 2752531, 0, 0, 2818067, 0, 0, 2883603, 0, 0, 2621460, 0, 0, 2686996, 0, 0, 2752532, 0, 0, 2818068, 0, 0, 2883604, 0, 0, 2621461, 0, 0, 2686997, 0, 0, 2752533, 0, 0, 2818069, 0, 0, 2883605, 0, 0, 2621462, 0, 0, 2686998, 0, 0, 2752534, 0, 0, 2818070, 0, 0, 2883606, 0, 0, 2621463, 0, 0, 2686999, 0, 0, 2752535, 0, 0, 2818071, 0, 0, 2883607, 0, 0, 2621464, 0, 0, 2687000, 0, 0, 2752536, 0, 0, 2818072, 0, 0, 2883608, 0, 0, 2621465, 0, 0, 2687001, 0, 0, 2752537, 0, 0, 2818073, 0, 0, 2883609, 0, 0, 2621466, 0, 0, 2687002, 0, 0, 2752538, 0, 0, 2818074, 0, 0, 2883610, 0, 0, 2621467, 0, 0, 2687003, 0, 0, 2752539, 0, 0, 2818075, 0, 0, 2883611, 0, 0, 2621468, 0, 0, 2687004, 0, 0, 2752540, 0, 0, 2818076, 0, 0, 2883612, 0, 0, 2621469, 0, 0, 2687005, 0, 0, 2752541, 0, 0, 2818077, 0, 0, 2883613, 0, 0, 2621470, 0, 0, 2687006, 0, 0, 2752542, 0, 0, 2818078, 0, 0, 2883614, 0, 0, 2621471, 0, 0, 2687007, 0, 0, 2752543, 0, 0, 2818079, 0, 0, 2883615, 0, 0, 2621472, 0, 0, 2687008, 0, 0, 2752544, 0, 0, 2818080, 0, 0, 2883616, 0, 0, 2621473, 0, 0, 2687009, 0, 0, 2752545, 0, 0, 2818081, 0, 0, 2883617, 0, 0, 2621474, 0, 0, 2687010, 0, 0, 2752546, 0, 0, 2818082, 0, 0, 2883618, 0, 0, 2621475, 0, 0, 2687011, 0, 0, 2752547, 0, 0, 2818083, 0, 0, 2883619, 0, 0, 2621476, 0, 0, 2687012, 0, 0, 2752548, 0, 0, 2818084, 0, 0, 2883620, 0, 0, 2621477, 0, 0, 2687013, 0, 0, 2752549, 0, 0, 2818085, 0, 0, 2883621, 0, 0, 2621478, 0, 0, 2687014, 0, 0, 2752550, 0, 0, 2818086, 0, 0, 2883622, 0, 0, 2621479, 0, 0, 2687015, 0, 0, 2752551, 0, 0, 2818087, 0, 0, 2883623, 0, 0, 2621480, 0, 0, 2687016, 0, 0, 2752552, 0, 0, 2818088, 0, 0, 2883624, 0, 0, 2621481, 0, 0, 2687017, 0, 0, 2752553, 0, 0, 2818089, 0, 0, 2883625, 0, 0, 2621482, 0, 0, 2687018, 0, 0, 2752554, 0, 0, 2818090, 0, 0, 2883626, 0, 0, 2621483, 0, 0, 2687019, 0, 0, 2752555, 0, 0, 2818091, 0, 0, 2883627, 0, 0, 2621484, 0, 0, 2687020, 0, 0, 2752556, 0, 0, 2818092, 0, 0, 2883628, 0, 0, 2621485, 0, 0, 2687021, 0, 0, 2752557, 0, 0, 2818093, 0, 0, 2883629, 0, 0, 2621486, 0, 0, 2687022, 0, 0, 2752558, 0, 0, 2818094, 0, 0, 2883630, 0, 0, 2621487, 0, 0, 2687023, 0, 0, 2752559, 0, 0, 2818095, 0, 0, 2883631, 0, 0, 2621488, 0, 0, 2687024, 0, 0, 2752560, 0, 0, 2818096, 0, 0, 2883632, 0, 0, 2621489, 0, 0, 2687025, 0, 0, 2752561, 0, 0, 2818097, 0, 0, 2883633, 0, 0, 2621490, 0, 0, 2687026, 0, 0, 2752562, 0, 0, 2818098, 0, 0, 2883634, 0, 0, 2621491, 0, 0, 2687027, 0, 0, 2752563, 0, 0, 2818099, 0, 0, 2883635, 0, 0, 2621492, 0, 0, 2687028, 0, 0, 2752564, 0, 0, 2818100, 0, 0, 2883636, 0, 0, 2621493, 0, 0, 2687029, 0, 0, 2752565, 0, 0, 2818101, 0, 0, 2883637, 0, 0, 2621494, 0, 0, 2687030, 0, 0, 2752566, 0, 0, 2818102, 0, 0, 2883638, 0, 0, 2621495, 0, 0, 2687031, 0, 0, 2752567, 0, 0, 2818103, 0, 0, 2883639, 0, 0, 2621496, 0, 0, 2687032, 0, 0, 2752568, 0, 0, 2818104, 0, 0, 2883640, 0, 0, 2621497, 0, 0, 2687033, 0, 0, 2752569, 0, 0, 2818105, 0, 0, 2883641, 0, 0, 2621498, 0, 0, 2687034, 0, 0, 2752570, 0, 0, 2818106, 0, 0, 2883642, 0, 0, 2621499, 0, 0, 2687035, 0, 0, 2752571, 0, 0, 2818107, 0, 0, 2883643, 0, 0, 2621500, 0, 0, 2687036, 0, 0, 2752572, 0, 0, 2818108, 0, 0, 2883644, 0, 0, 2621501, 0, 0, 2687037, 0, 0, 2752573, 0, 0, 2818109, 0, 0, 2883645, 0, 0, 2621502, 0, 0, 2687038, 0, 0, 2752574, 0, 0, 2818110, 0, 0, 2883646, 0, 0, 2621503, 0, 0, 2687039, 0, 0, 2752575, 0, 0, 2818111, 0, 0, 2883647, 0, 0, 2621504, 0, 0, 2687040, 0, 0, 2752576, 0, 0, 2818112, 0, 0, 2883648, 0, 0, 2621505, 0, 0, 2687041, 0, 0, 2752577, 0, 0, 2818113, 0, 0, 2883649, 0, 0, 2621506, 0, 0, 2687042, 0, 0, 2752578, 0, 0, 2818114, 0, 0, 2883650, 0, 0, 2621507, 0, 0, 2687043, 0, 0, 2752579, 0, 0, 2818115, 0, 0, 2883651, 0, 0, 2621508, 0, 0, 2687044, 0, 0, 2752580, 0, 0, 2818116, 0, 0, 2883652, 0, 0, 2621509, 0, 0, 2687045, 0, 0, 2752581, 0, 0, 2818117, 0, 0, 2883653, 0, 0, 2621510, 0, 0, 2687046, 0, 0, 2752582, 0, 0, 2818118, 0, 0, 2883654, 0, 0, 2621511, 0, 0, 2687047, 0, 0, 2752583, 0, 0, 2818119, 0, 0, 2883655, 0, 0, 2621512, 0, 0, 2687048, 0, 0, 2752584, 0, 0, 2818120, 0, 0, 2883656, 0, 0, 2621513, 0, 0, 2687049, 0, 0, 2752585, 0, 0, 2818121, 0, 0, 2883657, 0, 0, 2621514, 0, 0, 2687050, 0, 0, 2752586, 0, 0, 2818122, 0, 0, 2883658, 0, 0, 2621515, 0, 0, 2687051, 0, 0, 2752587, 0, 0, 2818123, 0, 0, 2883659, 0, 0, 2621516, 0, 0, 2687052, 0, 0, 2752588, 0, 0, 2818124, 0, 0, 2883660, 0, 0, 2621517, 0, 0, 2687053, 0, 0, 2752589, 0, 0, 2818125, 0, 0, 2883661, 0, 0, 2621518, 0, 0, 2687054, 0, 0, 2752590, 0, 0, 2818126, 0, 0, 2883662, 0, 0, 2621519, 0, 0, 2687055, 0, 0, 2752591, 0, 0, 2818127, 0, 0, 2883663, 0, 0, 2621438, 0, 0, 2686974, 0, 0, 2621439, 65536, 0, 2686975, 65536, 0, 2621436, 0, 0, 2686972, 0, 0, 2621437, 65536, 0, 2686973, 65536, 0, 2621434, 0, 0, 2686970, 0, 0, 2621435, 65536, 0, 2686971, 65536, 0, 2621432, 0, 0, 2686968, 0, 0, 2621433, 65536, 0, 2686969, 65536, 0, 2621430, 0, 0, 2686966, 0, 0, 2621431, 65536, 0, 2686967, 65536, 0, 2621428, 0, 0, 2686964, 0, 0, 2621429, 65536, 0, 2686965, 65536, 0, 2621426, 0, 0, 2686962, 0, 0, 2621427, 65536, 0, 2686963, 65536, 0, 2621424, 0, 0, 2686960, 0, 0, 2621425, 65536, 0, 2686961, 65536, 0, 2621422, 0, 0, 2686958, 0, 0, 2621423, 65536, 0, 2686959, 65536, 0, 2621420, 0, 0, 2686956, 0, 0, 2621421, 65536, 0, 2686957, 65536, 0, 2752492, 0, 1, 2752493, 65536, 1, 2818028, 0, 0, 2883564, 0, 1, 2818029, 65536, 0, 2883565, 65536, 1, 2949100, 0, 0, 2949101, 65536, 0, 2752494, 0, 1, 2752495, 65536, 1, 2818030, 0, 0, 2883566, 0, 1, 2818031, 65536, 0, 2883567, 65536, 1, 2949102, 0, 0, 2949103, 65536, 0, 2752496, 0, 1, 2752497, 65536, 1, 2818032, 0, 0, 2883568, 0, 1, 2818033, 65536, 0, 2883569, 65536, 1, 2949104, 0, 0, 2949105, 65536, 0, 2752498, 0, 1, 2752499, 65536, 1, 2818034, 0, 0, 2883570, 0, 1, 2818035, 65536, 0, 2883571, 65536, 1, 2949106, 0, 0, 2949107, 65536, 0, 2752500, 0, 1, 2752501, 65536, 1, 2818036, 0, 0, 2883572, 0, 1, 2818037, 65536, 0, 2883573, 65536, 1, 2949108, 0, 0, 2949109, 65536, 0, 2752502, 0, 1, 2752503, 65536, 1, 2818038, 0, 0, 2883574, 0, 1, 2818039, 65536, 0, 2883575, 65536, 1, 2949110, 0, 0, 2949111, 65536, 0, 2752504, 0, 1, 2752505, 65536, 1, 2818040, 0, 0, 2883576, 0, 1, 2818041, 65536, 0, 2883577, 65536, 1, 2949112, 0, 0, 2949113, 65536, 0, 2752506, 0, 1, 2752507, 65536, 1, 2818042, 0, 0, 2883578, 0, 1, 2818043, 65536, 0, 2883579, 65536, 1, 2949114, 0, 0, 2949115, 65536, 0, 2752508, 0, 1, 2752509, 65536, 1, 2818044, 0, 0, 2883580, 0, 1, 2818045, 65536, 0, 2883581, 65536, 1, 2949116, 0, 0, 2949117, 65536, 0, 2752510, 0, 1, 2752511, 65536, 1, 2818046, 0, 0, 2883582, 0, 1, 2818047, 65536, 0, 2883583, 65536, 1, 2949118, 0, 0, 2949119, 65536, 0, 2555984, 0, 0, 2621520, 0, 1, 2555985, 65536, 0, 2621521, 65536, 1, 2687056, 0, 0, 2752592, 0, 1, 2687057, 65536, 0, 2752593, 65536, 1, 2818128, 0, 0, 2883664, 0, 1, 2818129, 65536, 0, 2883665, 65536, 1, 2555986, 0, 0, 2621522, 0, 1, 2555987, 65536, 0, 2621523, 65536, 1, 2687058, 0, 0, 2752594, 0, 1, 2687059, 65536, 0, 2752595, 65536, 1, 2818130, 0, 0, 2883666, 0, 1, 2818131, 65536, 0, 2883667, 65536, 1, 2555988, 0, 0, 2621524, 0, 1, 2555989, 65536, 0, 2621525, 65536, 1, 2687060, 0, 0, 2752596, 0, 1, 2687061, 65536, 0, 2752597, 65536, 1, 2818132, 0, 0, 2883668, 0, 1, 2818133, 65536, 0, 2883669, 65536, 1, 2555990, 0, 0, 2621526, 0, 1, 2555991, 65536, 0, 2621527, 65536, 1, 2687062, 0, 0, 2752598, 0, 1, 2687063, 65536, 0, 2752599, 65536, 1, 2818134, 0, 0, 2883670, 0, 1, 2818135, 65536, 0, 2883671, 65536, 1, 2555992, 0, 0, 2621528, 0, 1, 2555993, 65536, 0, 2621529, 65536, 1, 2687064, 0, 0, 2752600, 0, 1, 2687065, 65536, 0, 2752601, 65536, 1, 2818136, 0, 0, 2883672, 0, 1, 2818137, 65536, 0, 2883673, 65536, 1, 2555994, 0, 0, 2621530, 0, 1, 2555995, 65536, 0, 2621531, 65536, 1, 2687066, 0, 0, 2752602, 0, 1, 2687067, 65536, 0, 2752603, 65536, 1, 2818138, 0, 0, 2883674, 0, 1, 2818139, 65536, 0, 2883675, 65536, 1, 2555996, 0, 0, 2621532, 0, 1, 2555997, 65536, 0, 2621533, 65536, 1, 2687068, 0, 0, 2752604, 0, 1, 2687069, 65536, 0, 2752605, 65536, 1, 2818140, 0, 0, 2883676, 0, 1, 2818141, 65536, 0, 2883677, 65536, 1, 2555998, 0, 0, 2621534, 0, 1, 2555999, 65536, 0, 2621535, 65536, 1, 2687070, 0, 0, 2752606, 0, 1, 2687071, 65536, 0, 2752607, 65536, 1, 2818142, 0, 0, 2883678, 0, 1, 2818143, 65536, 0, 2883679, 65536, 1, 2556000, 0, 0, 2621536, 0, 1, 2556001, 65536, 0, 2621537, 65536, 1, 2687072, 0, 0, 2752608, 0, 1, 2687073, 65536, 0, 2752609, 65536, 1, 2818144, 0, 0, 2883680, 0, 1, 2818145, 65536, 0, 2883681, 65536, 1)

[node name="Pantano" type="TileMap" parent="."]
visible = false
format = 2

[node name="Rico" parent="." instance=ExtResource("13_x4mqa")]
visible = false
position = Vector2(187, 274)

[connection signal="area_entered" from="LeftPortal" to="." method="_on_left_portal_area_entered"]
[connection signal="area_entered" from="RightPortal" to="." method="_on_right_portal_area_entered"]
[connection signal="area_entered" from="CharacterLeft/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="CharacterLeft/Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="area_entered" from="CharacterRight/Area2DRight" to="." method="_on_area_2d_right_area_entered"]
[connection signal="area_exited" from="CharacterRight/Area2DRight" to="." method="_on_area_2d_right_area_exited"]
